--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!-- 스프링부트 플러그인 -->
