--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!-- 마이바티스 -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 스프링부트 플러그인 -->
