--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+# h2 설정
 server.port=${port:8080}
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+
+# Datasource 설정
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+# jpa 설정
+spring.jpa.database=h2
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+## Hibernate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
